--- a/react-netgrid/src/App.css
+++ b/react-netgrid/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #a1b2d4;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,6 +26,7 @@
 
 .App-link {
   color: #61dafb;
+  margin-bottom: 15px;
 }
 
 @keyframes App-logo-spin {
